--- a/src/app/businessesComponent/businesses.component.html
+++ b/src/app/businessesComponent/businesses.component.html
@@ -40,7 +40,9 @@
                         This business based in {{business.town}}
                     </div>
                     <div class="card-footer">
-                        Rating: {{business.rating}}
+                        <span *ngFor="let star of [].constructor(business.rating)">
+                            <img src="./images/star.png" alt="star for rating" style="width: 30px; height: 30px;">
+                        </span>
                     </div>
                 </div>
             }
